--- a/index.html
+++ b/index.html
@@ -1,7 +1,9 @@
-<!DOCTYPE html>
-<html lang="en">
-    <head>
-        <title>Home | Web-App of smmziaul</title>
-    </head>
-    <body>hi</body>
- </html>
+<!doctype html>
+<html>
+  <head>
+      <title>Soofi Hussain S.M.M.</title>
+  </head>
+  <body>
+    <p>Hello there!, Welcome to my Portfolio</p>  
+  </body>
+</html>
