testing div tags

--- a/index.html
+++ b/index.html
@@ -1,9 +1,14 @@
-<!doctype html>
 <html>
   <head>
-      <title>Soofi Hussain S.M.M.</title>
+    <title>Soofi Hussain S.M.M.</title>
   </head>
   <body>
-    <p>Hello there!, Welcome to my Portfolio</p>  
+    <div id="div1">
+      <p>Hello there!, Welcome to my Portfolio</p>
+      <p>this is the line from div1</p>
+    </div>
+    <div id="div2">
+      <p>this is the line from div2</p>
+    <div>
   </body>
 </html>
