--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
   <body>
     <div id="div1">
       <p>Hello there!, Welcome to my Portfolio</p>
-      <p>this is the line from div1</p>
+      <p>I am doing my final year B.E. - Computer Science & Engineering</p>
     </div>
     <div id="div2">
-      <p>this is the line from div2</p>
+      <p>More details about me are on the way, as this site is still in progress...
+      Keep Calm and Wait for this site to be built...</p>
     <div>
   </body>
 </html>
