--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <title>Soofi Hussain S.M.M.</title>
   </head>
   <body>
-    <div id="div1" align="center">
+    <div id="div1" text-align="center">
       <p>Hello there!, Welcome to my Portfolio</p>
       <p>I am doing my final year B.E. - Computer Science & Engineering</p>
     </div>
