--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
     <title>Soofi Hussain S.M.M.</title>
   </head>
   <body>
-    <div id="div1" text-align="center">
+    <div class="div1" text-align="center">
       <p>Hello there!, Welcome to my Portfolio</p>
       <p>I am doing my final year B.E. - Computer Science & Engineering</p>
     </div>
-    <div id="div1">
+    <div class="div1">
       <p>More details about me are on the way, as this site is still in progress...
       Keep Calm and Wait for this site to be built...</p>
     <div>
