--- a/index.html
+++ b/index.html
@@ -1,6 +1,15 @@
 <html>
   <head>
     <title>Soofi Hussain S.M.M.</title>
+    <meta name="description" content="description of your website/webpage, make sure you use keywords!">
+    <meta property="og:title" content="short title of your website/webpage" />
+    <meta property="og:url" content="https://www.example.com/webpage/" />
+    <meta property="og:description" content="description of your website/webpage">
+    <meta property="og:image" content="//cdn.example.com/uploads/images/webpage_300x200.png">
+    <meta property="og:type" content="article" />
+    <meta property="og:locale" content="en_GB" />
+    <meta property="og:locale:alternate" content="fr_FR" />
+    <meta property="og:locale:alternate" content="es_ES" />
   </head>
   <body>
     <div id="div1" text-align="center">
