--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta property="og:title" content="short title of your website/webpage" />
     <meta property="og:url" content="https://www.example.com/webpage/" />
     <meta property="og:description" content="description of your website/webpage">
-    <meta property="og:image" content="//cdn.example.com/uploads/images/webpage_300x200.png">
+    <meta property="og:image" content="https://tools.impactbnd.com/placeholder/200x300">
     <meta property="og:type" content="article" />
     <meta property="og:locale" content="en_GB" />
     <meta property="og:locale:alternate" content="fr_FR" />
