--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <div id="div2" text-align="center">
       <p>More details about me are on the way, as this site is still in progress...
       Keep Calm and Wait for this site to be built...</p>
-      <p>A test element</p>
+      <p>A test element just to be used for testing</p>
     <div>
   </body>
 </html>
