--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
     <meta property="og:title" content="short title of your website/webpage" />
     <meta property="og:url" content="https://www.example.com/webpage/" />
     <meta property="og:description" content="description of your website/webpage">
-    <meta property="og:image" content="https://tools.impactbnd.com/placeholder/200x300">
+    <meta property="og:image" itemprop="image" content="https://tools.impactbnd.com/placeholder/200x300" />
+    <meta property="og:image:url" itemprop="image" content="https://tools.impactbnd.com/placeholder/200x300" />
+    <meta property="og:image:type" content="image/png" />
     <meta property="og:type" content="article" />
     <meta property="og:locale" content="en_GB" />
     <meta property="og:locale:alternate" content="fr_FR" />
@@ -19,7 +21,7 @@
     <div id="div2" text-align="center">
       <p>More details about me are on the way, as this site is still in progress...
       Keep Calm and Wait for this site to be built...</p>
-      <p>A test element just to be used for testing</p>
+      <p>A test element</p>
     <div>
   </body>
 </html>
