--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta name="description" content="description of your website/webpage, make sure you use keywords!">
     <meta property="og:title" content="property name - og title comes here" />
     <meta property="og:url" content="property name - og url comes here" />
-    <meta property="og:description" content="property name - og description comes here">
+    <meta property="og:description" content="property name - og description comes here" />
     <meta property="og:image" itemprop="image" content="https://tools.impactbnd.com/placeholder/200x300" />
     <meta property="og:image:url" itemprop="image" content="https://tools.impactbnd.com/placeholder/200x300" />
     <meta property="og:image:type" content="image/png" />
@@ -21,7 +21,7 @@
     <div id="div2" text-align="center">
       <p>More details about me are on the way, as this site is still in progress...
       Keep Calm and Wait for this site to be built...</p>
-      <p>A test element hi</p>
+      <p>A test element hi da machan</p>
     <div>
   </body>
 </html>
