--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <html>
   <head>
     <title>Soofi Hussain S.M.M.</title>
-    <meta name="description" content="description of your website/webpage, make sure you use keywords!">
+    <meta name="description" content="description of your website/webpage, make sure you use keywords!" />
     <meta property="og:title" content="short title of your website/webpage" />
     <meta property="og:url" content="https://www.example.com/webpage/" />
-    <meta property="og:description" content="description of your website/webpage">
+    <meta property="og:description" content="description of your website/webpage" />
     <meta property="og:image" itemprop="image" content="https://tools.impactbnd.com/placeholder/200x300" />
     <meta property="og:image:url" itemprop="image" content="https://tools.impactbnd.com/placeholder/200x300" />
     <meta property="og:image:type" content="image/png" />
