--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <html>
   <head>
     <title>Soofi Hussain S.M.M.</title>
-    <meta name="description" content="description of your website/webpage, make sure you use keywords!" />
+    <meta name="description" content="description of your website/webpage, make sure you use keywords!">
     <meta property="og:title" content="short title of your website/webpage" />
     <meta property="og:url" content="https://www.example.com/webpage/" />
     <meta property="og:description" content="description of your website/webpage" />
